Resolves: fdo#82355 crash on loading ppt

regression probably triggered by...

commit 2e3c45afc6c5ea74f1f8b4a7dce806e537870546
Date:   Fri Mar 4 07:38:16 2011 -0800
Remove usage of deprecated List container.

but that just stopped at the first NULL by chance

Change-Id: I767e3bc3130d99cedceb4172857d1741c677b19b
(cherry picked from commit f47baab6d35752b0babba768e299416ea5dd447d)
Reviewed-on: https://gerrit.libreoffice.org/11029
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>